--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,27 +1,18 @@
+@import url('https://fonts.cdnfonts.com/css/pirulen');
 .App {
+  background-image: url('../../resources/cashelBackground.jpeg');
   text-align: center;
-}
-
-.App-logo {
-  width: 100%;
-  pointer-events: none;
-}
-/*
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}*/
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(20px + 2vmin);
+  font-family: 'Pirulen Rg', sans-serif;
+  font-weight: bold;
+  -webkit-text-stroke-width: 0.25px;
+  -webkit-text-stroke-color: white;
+  color: black;
 }
 
 .App-link {
