--- a/src/Components/AppBar.css
+++ b/src/Components/AppBar.css
@@ -1,7 +1,10 @@
-.nav-button {
-color: white; 
-display: 'block';
-}
+@import url('https://fonts.cdnfonts.com/css/pirulen');
+
 .app-bar {
-  background : green;
+  background: #046904;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
 }
